# genicam

./: .gitattributes  .gitignore  CMakeLists.txt  daheng_gx.hpp
lib/dmitigr/: daheng_gx.hpp
